--- a/scss/main.scss
+++ b/scss/main.scss
@@ -32,6 +32,7 @@ body {
   background-color: var(--background-clr);
   margin: 0;
   padding: 0;
+  scroll-behavior: smooth;
 }
 
 .sections-title {
