--- a/scss/_menu.scss
+++ b/scss/_menu.scss
@@ -113,9 +113,13 @@
     margin: 6rem 0 0 0;
   }
   @include mq(768px) {
+    box-shadow: none;
     display: flex;
     justify-content: space-evenly;
     margin: 0;
+    padding: 0 1.8rem;
+    position: static;
+    transform: scale(1, 1);
   }
   @include mq(992px) {
     padding: 0 1.6rem;
@@ -133,9 +137,11 @@
     justify-content: center;
     height: 4rem;
     transition: background-color 0.3s ease-in-out;
-    // width: 25%;
     @include mq(576px) {
       height: 6rem;
+    }
+    @include mq(768px) {
+      width: 25%;
     }
 
     a {
@@ -146,7 +152,10 @@
       text-align: center;
       text-decoration: none;
       transition: color 0.3s ease-in-out, opacity 0.1s ease-in-out;
-      // width: 100%;
+      @include mq(768px) {
+        opacity: 1;
+        width: 100%;
+      }
       @include mq(992px) {
         font-size: 2.4rem;
       }
