--- a/css/main.css
+++ b/css/main.css
@@ -98,7 +98,7 @@
 .hamburger-menu-bar::before, .hamburger-menu-bar::after {
   background-color: var(--primary-clr);
   border-radius: 1.5px;
-  content: "";
+  content: '';
   height: 0.4rem;
   position: absolute;
   width: 2.5rem;
@@ -180,7 +180,7 @@
   }
 }
 .navbar-list .menu-items {
-  background-color: var(--secondary-clr);
+  background-color: var(--primary-clr);
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
@@ -201,11 +201,12 @@
 }
 @media screen and (min-width: 768px) {
   .navbar-list .menu-items {
+    background-color: var(--secondary-clr);
     width: 25%;
   }
 }
 .navbar-list .menu-items a {
-  color: var(--primary-clr);
+  color: var(--background-clr);
   font-family: var(--text-font);
   font-size: 1.8rem;
   line-height: 4rem;
@@ -223,6 +224,7 @@
 }
 @media screen and (min-width: 768px) {
   .navbar-list .menu-items a {
+    color: var(--primary-clr);
     opacity: 1;
   }
 }
@@ -235,7 +237,7 @@
   margin-right: 0.5rem;
 }
 .navbar-list .menu-items:hover {
-  background-color: var(--primary-clr);
+  background-color: #e6e4cf;
 }
 .navbar-list .menu-items:hover a {
   color: var(--background-clr);
@@ -639,7 +641,7 @@
 
 .list {
   display: grid;
-  grid-row-gap: 2rem;
+  grid-row-gap: 1rem;
   margin: 0;
   padding: 0;
   width: 100%;
@@ -679,13 +681,15 @@
     width: 80%;
   }
 }
-.list .box {
+
+.box {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
   background-color: var(--primary-clr);
   border-radius: 0.5rem;
   color: var(--background-clr);
+  cursor: pointer;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -693,29 +697,31 @@
   list-style-type: none;
   padding: 0 10px;
   text-transform: uppercase;
+  -webkit-transition: border-radius 0.4s ease-in-out;
+  transition: border-radius 0.4s ease-in-out;
   width: 100%;
 }
-.list .box i {
+.box i {
   font-size: 2.2rem;
 }
 @media screen and (min-width: 768px) {
-  .list .box i {
+  .box i {
     font-size: 3.6rem;
   }
 }
 @media screen and (min-width: 1200px) {
-  .list .box i {
+  .box i {
     font-size: 3rem;
   }
 }
 @media screen and (min-width: 576px) {
-  .list .box {
+  .box {
     font-size: 2.8rem;
     height: 5rem;
   }
 }
 @media screen and (min-width: 768px) {
-  .list .box {
+  .box {
     -webkit-box-shadow: 0 5px 10px 0 rgba(0, 0, 0, 0.3);
             box-shadow: 0 5px 10px 0 rgba(0, 0, 0, 0.3);
     -webkit-box-orient: vertical;
@@ -733,41 +739,128 @@
     text-align: center;
     width: 24rem;
   }
-  .list .box:nth-child(3) {
+  .box:nth-child(3) {
     margin-right: 0;
   }
-  .list .box:nth-child(4) {
+  .box:nth-child(4) {
     margin-bottom: 0;
   }
-  .list .box:nth-child(5) {
+  .box:nth-child(5) {
     margin-bottom: 0;
   }
 }
 @media screen and (min-width: 1200px) {
-  .list .box {
+  .box {
     margin: 0;
     width: 17rem;
   }
 }
-.list .box .category {
+.box .category {
   font-family: var(--text-font);
   font-size: 2.2rem;
   margin: 3px 0 0 1.2rem;
 }
 @media screen and (min-width: 576px) {
-  .list .box .category {
+  .box .category {
     font-size: 2.8rem;
   }
 }
 @media screen and (min-width: 768px) {
-  .list .box .category {
+  .box .category {
     margin: 0.7rem 0 0 0;
   }
 }
 @media screen and (min-width: 1200px) {
-  .list .box .category {
+  .box .category {
     font-size: 2.4rem;
   }
+}
+
+.box-expanded {
+  background-color: var(--primary-clr);
+  border-bottom-left-radius: 0.5rem;
+  border-bottom-right-radius: 0.5rem;
+  max-height: 0;
+  display: grid;
+  grid-row-gap: 2rem;
+  margin-top: -2rem;
+  padding: 1rem;
+  -webkit-transform: scale(1, 0);
+          transform: scale(1, 0);
+  -webkit-transform-origin: top;
+          transform-origin: top;
+  -webkit-transition: max-height 0.2s ease-in-out 0.3s, -webkit-transform 0.5s ease-in-out;
+  transition: max-height 0.2s ease-in-out 0.3s, -webkit-transform 0.5s ease-in-out;
+  transition: transform 0.5s ease-in-out, max-height 0.2s ease-in-out 0.3s;
+  transition: transform 0.5s ease-in-out, max-height 0.2s ease-in-out 0.3s, -webkit-transform 0.5s ease-in-out;
+}
+.box-expanded .box-edu-wrapper {
+  background-color: var(--background-clr);
+  border-radius: 0.5rem;
+  opacity: 0;
+  padding: 1.5rem 1rem;
+  -webkit-transition: opacity 0.5s ease-in-out;
+  transition: opacity 0.5s ease-in-out;
+}
+.box-expanded .box-edu-wrapper .edu-date {
+  color: var(--primary-clr);
+  font-family: var(--titles-font);
+  font-size: 1.5rem;
+  font-style: italic;
+  font-weight: 100;
+  margin: 0 0 2rem 0;
+  text-align: center;
+}
+.box-expanded .box-edu-wrapper .edu-desc {
+  color: var(--primary-clr);
+  font-family: var(--text-font);
+  font-size: 1.6rem;
+  font-weight: 700;
+  line-height: 2rem;
+  margin: 0 0 1.5rem 0;
+  text-align: center;
+  text-transform: uppercase;
+}
+.box-expanded .box-edu-wrapper .edu-desc2 {
+  color: var(--primary-clr);
+  font-family: var(--text-font);
+  font-size: 1.6rem;
+  line-height: 2rem;
+  margin: 0;
+  text-align: center;
+}
+.box-expanded .box-edu-wrapper .edu-desc2 .edu-desc-bold {
+  font-weight: 700;
+  text-transform: uppercase;
+}
+.box-expanded .box-edu-wrapper:last-child .edu-desc2 {
+  margin: 0 0 1.5rem 0;
+}
+.box-expanded .box-edu-wrapper:last-child .edu-desc2:last-child {
+  margin: 0;
+}
+.box-expanded .is-visible {
+  opacity: 1;
+  -webkit-transition: opacity 0.5s ease-in-out;
+  transition: opacity 0.5s ease-in-out;
+}
+
+.change {
+  border-bottom-left-radius: 0;
+  border-bottom-right-radius: 0;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.is-open {
+  max-height: 500px;
+  -webkit-transform: scale(1, 1);
+          transform: scale(1, 1);
+  -webkit-transition: -webkit-transform 0.5s ease-in-out;
+  transition: -webkit-transform 0.5s ease-in-out;
+  transition: transform 0.5s ease-in-out;
+  transition: transform 0.5s ease-in-out, -webkit-transform 0.5s ease-in-out;
 }
 
 .portfolio {
